--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorPrimary"
-    tools:context="com.alex.towerofhanoi.MainActivity">
+    tools:context="com.alex.towerofhanoi.MainActivity"
+    android:id="@+id/main_layout">
 
     <android.support.v4.widget.Space
         android:layout_width="1dp"
@@ -66,10 +67,10 @@
         android:layout_marginRight="40dp"
         android:layout_marginStart="40dp"
         android:background="@color/mustard_yellow"
-        android:onClick="settings"
+        android:onClick="highScores"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
-        android:text="@string/settings"
+        android:text="@string/high_scores"
         android:textAllCaps="false"
         android:textSize="24sp" />
 
@@ -88,9 +89,10 @@
         android:layout_marginRight="40dp"
         android:layout_marginStart="40dp"
         android:background="@color/heather_purple"
+        android:onClick="settings"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
-        android:text="@string/about"
+        android:text="@string/settings"
         android:textAllCaps="false"
         android:textSize="24sp" />
 
