--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,5 +28,7 @@
     <color name="royal_blue">#6c8fd0</color>
     <color name="mustard_yellow">#f4b710</color>
     <color name="heather_purple">#b19cd9</color>
+    <color name="deep_orange">#ff5722</color>
+    <color name="blue_gray">#607d8b</color>
 
 </resources>
