--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
+    android:id="@+id/gameLayout"
     tools:context="com.alex.towerofhanoi.GameActivity">
 
     <RelativeLayout
