--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -28,10 +28,10 @@
     </Preference>
 
     <PreferenceScreen
-        android:title="Disk Appearance"
+        android:title="@string/disk_colors"
         android:summary="@string/disk_summary">
         <PreferenceCategory
-            android:title="@string/basic_colors" >
+            android:title="@string/basic_colors">
             <CheckBoxPreference
                 android:key="disk_color_black"
                 android:icon="@drawable/color_black"
@@ -70,7 +70,7 @@
                 android:title="@string/yellow"/>
         </PreferenceCategory>
         <PreferenceCategory
-            android:title="Additional Colors">
+            android:title="@string/additional_colors">
             <CheckBoxPreference
                 android:key="disk_color_mint_green"
                 android:icon="@drawable/color_mint_green"
@@ -91,6 +91,14 @@
                 android:icon="@drawable/color_heather_purple"
                 android:title="@string/heather_purple"
                 android:defaultValue="true"/>
+            <CheckBoxPreference
+                android:key="disk_color_deep_orange"
+                android:icon="@drawable/color_deep_orange"
+                android:title="@string/deep_orange"/>
+            <CheckBoxPreference
+                android:key="disk_color_blue_gray"
+                android:icon="@drawable/color_blue_gray"
+                android:title="@string/blue_gray"/>
         </PreferenceCategory>
     </PreferenceScreen>
 
